--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta http-equiv="expires" content="0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script type="text/javascript">
       var Ip = returnCitySN["cip"];
       var cityname = returnCitySN["cname"];
