ico替换为网络地址

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="no-cache, no-store, must-revalidate"
     />
     <meta http-equiv="expires" content="0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="https://ydidc-dev.oss-cn-shanghai.aliyuncs.com/f7a807ce-5970-4fab-a6c1-afae87435ef4.png" />
     <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script type="text/javascript">
       var Ip = returnCitySN["cip"];
